--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 /* MENU SUPERIOR */
 #menusuperior{
-    background-image: url(IMG/arquitetura.jpg);
+    background-image: url(IMG/banner-arquitetura.jpg);
     padding-left: 50px;
     padding-top: 25px;
     padding-bottom: 60px;
